--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,6 +3,10 @@ name: Build and Create Release
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read  # Ensure the workflow has read access to the repository contents
+  id-token: write  # This is needed to fetch commit data in certain cases
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,6 +14,14 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Get commit ID and create a tag
+      run: |
+        COMMIT_ID=$(git rev-parse --short HEAD)
+        git tag $COMMIT_ID
+        git push origin $COMMIT_ID
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
@@ -26,14 +38,6 @@ jobs:
       run: |
         COMMIT_ID=$(git rev-parse --short HEAD)
         tar -czvf "./${COMMIT_ID}.tar.gz" -C .output .
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Get commit ID and create a tag
-      run: |
-        COMMIT_ID=$(git rev-parse --short HEAD)
-        git tag $COMMIT_ID
-        git push origin $COMMIT_ID
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
