--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -29,7 +29,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Create Tag
+    - uses: actions/checkout@v3
     - uses: Klemensas/action-autotag@stable
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
