--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -6,10 +6,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Create Git tag
+      run: |
+        COMMIT_ID=$(git rev-parse --short HEAD)
+        git tag $COMMIT_ID
+        git push origin $COMMIT_ID  # Ensure the tag is pushed to the remote repository
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
@@ -28,12 +38,7 @@ jobs:
         tar -czvf "./${COMMIT_ID}.tar.gz" -C .output .
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - uses: actions/checkout@v3
-    - uses: Klemensas/action-autotag@stable
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+        
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
